[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[dependencies]
client = { path = "../client" }
clap = { version = "4.0.5", default-features = false, features = ["derive", "std", "error-context", "suggestions", "help"] }
tokio = { version = "1.38.0", default-features = false, features = ["rt-multi-thread", "macros"] }
prost = { version = "0.11.6", default-features = false}
