[package]
name = "ldk-server-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
ldk-server-client = { path = "../ldk-server-client", features = ["serde"] }
clap = { version = "4.0.5", default-features = false, features = ["derive", "std", "error-context", "suggestions", "help"] }
tokio = { version = "1.38.0", default-features = false, features = ["rt-multi-thread", "macros"] }
serde = "1.0"
serde_json = "1.0"
