[package]
name = "ldk-server-client"
version = "0.1.0"
edition = "2021"

[dependencies]
ldk-server-protos = { path = "../ldk-server-protos" }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls-tls"] }
tokio = { version = "1.38.0", default-features = false }
prost = { version = "0.11.6", default-features = false, features = ["std", "prost-derive"] }
