[package]
name = "ldk-server-protos"
version = "0.1.0"
edition = "2021"

build = "build.rs"

[features]
default = []
serde = ["dep:serde", "dep:bytes"]

[dependencies]
prost = { version = "0.11.6", default-features = false, features = ["std", "prost-derive"] }
serde = { version = "1.0", features = ["derive"], optional = true }
bytes = { version = "1", features = ["serde"], optional = true }

[target.'cfg(genproto)'.build-dependencies]
prost-build = { version = "0.11.6", default-features = false }
